Fixed: Problem when using HTML entities in folder names causing text to be double-encoded. Fixed: Layout issues of warning, success and error messages in narrow frames (thread list, pm folders, etc.) Fixed: Layout issues with logon form in narrow frames. Changed: Rolled back to previous thread_get_tracking_data function to prevent table scanning.

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -827,7 +827,7 @@ a {
 
 .logon_separator {
    max-width: 100%;
-   width: 350;
+   width: 350px;
 }
 
 .search_dropdown {
